logs/dag_id=f1_data_pipeline_taskflow_with_kafka/run_id=manual__2024-06-12T12:50:11.239348+00:00/task_id=consume_and_load_raceDim/attempt=1.log
[2024-06-12T12:50:14.084+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-12T12:50:14.098+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: f1_data_pipeline_taskflow_with_kafka.consume_and_load_raceDim manual__2024-06-12T12:50:11.239348+00:00 [queued]>
[2024-06-12T12:50:14.102+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: f1_data_pipeline_taskflow_with_kafka.consume_and_load_raceDim manual__2024-06-12T12:50:11.239348+00:00 [queued]>
[2024-06-12T12:50:14.102+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-06-12T12:50:14.109+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): consume_and_load_raceDim> on 2024-06-12 12:50:11.239348+00:00
[2024-06-12T12:50:14.114+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=1027) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-12T12:50:14.115+0000] {standard_task_runner.py:63} INFO - Started process 1029 to run task
[2024-06-12T12:50:14.115+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'f1_data_pipeline_taskflow_with_kafka', 'consume_and_load_raceDim', 'manual__2024-06-12T12:50:11.239348+00:00', '--job-id', '80', '--raw', '--subdir', 'DAGS_FOLDER/kafka_data_scrape.py', '--cfg-path', '/tmp/tmput6wewyg']
[2024-06-12T12:50:14.116+0000] {standard_task_runner.py:91} INFO - Job 80: Subtask consume_and_load_raceDim
[2024-06-12T12:50:14.147+0000] {task_command.py:426} INFO - Running <TaskInstance: f1_data_pipeline_taskflow_with_kafka.consume_and_load_raceDim manual__2024-06-12T12:50:11.239348+00:00 [running]> on host 79a7d5bd11df
[2024-06-12T12:50:14.198+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='f1_data_pipeline_taskflow_with_kafka' AIRFLOW_CTX_TASK_ID='consume_and_load_raceDim' AIRFLOW_CTX_EXECUTION_DATE='2024-06-12T12:50:11.239348+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-12T12:50:11.239348+00:00'
[2024-06-12T12:50:14.199+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-12T12:50:14.201+0000] {conn.py:362} INFO - <BrokerConnection node_id=bootstrap-0 host=kafka:9092 <connecting> [IPv4 ('172.25.0.6', 9092)]>: connecting to kafka:9092 [('172.25.0.6', 9092) IPv4]
[2024-06-12T12:50:14.201+0000] {conn.py:957} INFO - Probing node bootstrap-0 broker version
[2024-06-12T12:50:14.202+0000] {conn.py:393} INFO - <BrokerConnection node_id=bootstrap-0 host=kafka:9092 <connecting> [IPv4 ('172.25.0.6', 9092)]>: Connection complete.
[2024-06-12T12:50:14.306+0000] {conn.py:1019} INFO - Broker version identified as 2.6.0
[2024-06-12T12:50:14.307+0000] {conn.py:1020} INFO - Set configuration api_version=(2, 6, 0) to skip auto check_version requests on startup
[2024-06-12T12:50:14.308+0000] {consumer.py:122} WARNING - group_id is None: disabling auto-commit.
[2024-06-12T12:50:14.308+0000] {subscription_state.py:167} INFO - Updating subscribed topics to: ('f1_data_topic_race',)
[2024-06-12T12:50:14.310+0000] {crypto.py:82} WARNING - empty cryptography key - values will not be stored encrypted.
[2024-06-12T12:50:14.311+0000] {base.py:84} INFO - Using connection ID 'sourcedb_connection' for task execution.
[2024-06-12T12:50:14.313+0000] {subscription_state.py:253} INFO - Updated partition assignment: [('f1_data_topic_race', 0)]
[2024-06-12T12:50:14.315+0000] {conn.py:362} INFO - <BrokerConnection node_id=1 host=kafka:9092 <connecting> [IPv4 ('172.25.0.6', 9092)]>: connecting to kafka:9092 [('172.25.0.6', 9092) IPv4]
[2024-06-12T12:50:14.315+0000] {conn.py:393} INFO - <BrokerConnection node_id=1 host=kafka:9092 <connecting> [IPv4 ('172.25.0.6', 9092)]>: Connection complete.
[2024-06-12T12:50:14.315+0000] {conn.py:673} INFO - <BrokerConnection node_id=bootstrap-0 host=kafka:9092 <connected> [IPv4 ('172.25.0.6', 9092)]>: Closing connection. 
[2024-06-12T12:50:14.434+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-12T12:50:14.435+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near ":"
LINE 2: ...CT "circuitId" FROM "circuitDim" WHERE "name_y" = :circuit_n...
                                                             ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/kafka_data_scrape.py", line 399, in consume_and_load_raceDim
    circuit_id = get_circuit_id(engine, circuit_ref)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/kafka_data_scrape.py", line 436, in get_circuit_id
    result = connection.execute(query, {'circuit_name': circuit_name}).fetchone()
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1370, in execute
    return self._exec_driver_sql(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1674, in _exec_driver_sql
    ret = self._execute_context(
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near ":"
LINE 2: ...CT "circuitId" FROM "circuitDim" WHERE "name_y" = :circuit_n...
                                                             ^

[SQL: 
            SELECT "circuitId" FROM "circuitDim" WHERE "name_y" = :circuit_name
        ]
[parameters: {'circuit_name': 'villeneuve'}]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2024-06-12T12:50:14.444+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=f1_data_pipeline_taskflow_with_kafka, task_id=consume_and_load_raceDim, run_id=manual__2024-06-12T12:50:11.239348+00:00, execution_date=20240612T125011, start_date=20240612T125014, end_date=20240612T125014
[2024-06-12T12:50:14.453+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 80 for task consume_and_load_raceDim ((psycopg2.errors.SyntaxError) syntax error at or near ":"
LINE 2: ...CT "circuitId" FROM "circuitDim" WHERE "name_y" = :circuit_n...
                                                             ^

[SQL: 
            SELECT "circuitId" FROM "circuitDim" WHERE "name_y" = :circuit_name
        ]
[parameters: {'circuit_name': 'villeneuve'}]
(Background on this error at: https://sqlalche.me/e/14/f405); 1029)
[2024-06-12T12:50:14.489+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-12T12:50:14.500+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-12T12:50:14.502+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
